# SusMat-SWAXS

./: .gitignore  .gitlab-ci.yml  .releaserc.yml  CHANGELOG.md  LICENSE  README.md  Spherical_harmonics_Full.ipynb  dat_conv.py  pyproject.toml  saxs_integration.py  saxs_integration_xeuss.py  sph_harm.py  waxs_integration_xeuss.py
.github/workflows/: release.yml
src/: saxs_integration_xeuss.py  topas_init.py  waxs_integration_xeuss_q.py  xeuss_dat_h5_multi.py  xeuss_edf_h5.py  xeuss_edf_h5_multi.py  xeuss_edf_text.py  xeuss_edf_tiff.py
src/sm-swaxs/: xeuss_dat_h5_multi.py
src/smswaxs/: __init__.py  dat_conv.py  saxs_integration_xeuss.py  sph_harm.py  topas_init.py  waxs_integration_xeuss.py  waxs_integration_xeuss_q.py  xeuss_dat_h5_multi.py  xeuss_edf_h5_multi.py  xrdml_conv.py
