[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "SusMat-SWAXS"
version = "0.2.1"
authors = [
  { name="Samuel Eyley", email="samuel.eyley@kuleuven.be" },
]
description = "A collection of python scripts for uploading analytical data to iRODS"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyfai>2024.10.0",
    "pyopencl",
    "click",
    "pyqt5",
    "h5py"
]

[project.urls]
Homepage = "https://gitlab.kuleuven.be/susmat/general/swaxs-1d-data-conversion"
Issues = "https://gitlab.kuleuven.be/susmat/general/swaxs-1d-data-conversion/-/issues"

[project.scripts]
sm-datconv = "smswaxs.dat_conv:cli"
sm-edfh5 = "smswaxs.xeuss_edf_h5_multi:add_edfs_to_hdf5"
sm-saxsint = "smswaxs.saxs_integration_xeuss:cli"
sm-waxsint = "smswaxs.waxs_integration_xeuss:cli"